@@ -1,3 +1,8 @@
+Sun Dec  8 11:59:40 2013  Aman Gupta <ruby@tmm1.net>
+
+	* hash.c (rb_hash_replace): add a write barrier to fix GC mark miss on
+	  hashes using Hash#replace [Bug #9226] [ruby-core:58948]
+
 Sun Dec  8 11:21:00 2013  Aman Gupta <ruby@tmm1.net>
 
 	* include/ruby/ruby.h: add RGENGC_WB_PROTECTED_NODE_CREF setting
